# attestation-rs

./: Dockerfile.gpu  README.md
.cargo/: audit.toml
.config/: nextest.toml
.github/workflows/: ci.yml  confidential-e2e.yml
crates/attestation/: Cargo.toml  README.md
crates/attestation-api/: Cargo.toml  README.md
crates/attestation-api/src/: main.rs
crates/attestation-api/src/api/: verify.rs
crates/attestation-api/src/token/: issuer.rs
crates/attestation-api/tests/: cert_tests.rs
crates/attestation-cli/: Cargo.toml
crates/attestation-cli/src/: main.rs
crates/attestation-wasm/: Cargo.toml
crates/attestation-wasm/src/: lib.rs
crates/attestation/examples/: az_snp.rs  az_tdx.rs  gcp_snp.rs  gcp_tdx.rs  gpu_nras.rs  snp.rs  tdx.rs  vendor_pinning.rs
crates/attestation/src/: error.rs  lib.rs  types.rs  utils.rs
crates/attestation/tests/: az_snp_live.rs  az_tdx_live.rs  capture_fixture.rs  live_dcap.rs
