[package]
name = "attestation-cli"
version = "0.4.0"
edition = "2021"
description = "Command-line interface for TEE attestation evidence generation and verification"
license = "Apache-2.0"

[features]
default = []
attest = ["attestation/attest"]
# Verify NVIDIA GPU bundles via NRAS (pure JWS/JSON; works anywhere).
nvidia-gpu = ["attestation/nvidia-gpu"]
# Collect NVIDIA GPU evidence during `attest` (CC-mode Linux host; requires the
# NVIDIA SDK / libnvat at build+run time). Implies `attest` + `nvidia-gpu`.
nvidia-gpu-attest = ["nvidia-gpu", "attest", "attestation/nvidia-gpu-attest"]

[dependencies]
attestation = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
